// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ResetStatusModal should match snapshot 1`] = `
<Memo(ConfirmModal)
  cancelButtonText=""
  checkboxText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Do not ask me again"
      id="modal.manual_status.ask"
    />
  }
  confirmButtonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Set status to \\"Online\\""
      id="modal.manual_status.button_online"
    />
  }
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Would you like to switch your status to \\"Online\\"?"
      id="modal.manual_status.message_online"
    />
  }
  onCancel={[Function]}
  onConfirm={[Function]}
  show={false}
  showCheckbox={true}
  title=""
/>
`;

exports[`components/ResetStatusModal should match snapshot, render modal for OOF status 1`] = `
<Memo(ConfirmModal)
  cancelButtonText=""
  checkboxText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Do not ask me again"
      id="modal.manual_status.ask"
    />
  }
  confirmButtonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Set status to \\"Online\\""
      id="modal.manual_status.button_online"
    />
  }
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Would you like to switch your status to \\"Online\\" and disable automatic replies?"
      id="modal.manual_status.auto_responder.message_online"
    />
  }
  onCancel={[Function]}
  onConfirm={[Function]}
  show={false}
  showCheckbox={false}
  title=""
/>
`;
